<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.wilson.projet03.MazeActivity">

        <!-- Titre -->
        <TextView
            android:layout_width="500dp"
            android:layout_height="36dp"
            android:text="@string/title"
            android:id="@+id/titre"
            style="@style/title"
            tools:ignore="MissingConstraints"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/defaultMargin"
            android:layout_marginLeft="@dimen/defaultMargin"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="@dimen/defaultMargin"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent" />

        <!-- Labyrinthe -->
        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/maze"
            android:layout_marginTop="@dimen/defaultMargin"
            app:layout_constraintTop_toBottomOf="@+id/titre"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="@dimen/defaultMargin"
            android:layout_marginStart="@dimen/defaultMargin"
            android:layout_marginRight="@dimen/defaultMargin"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginEnd="@dimen/defaultMargin">
        </TableLayout>

        <!-- Caractéristiques du personnage -->
        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/features"
            android:layout_marginTop="@dimen/zero"
            app:layout_constraintTop_toBottomOf="@+id/maze"
            android:layout_marginLeft="@dimen/defaultMargin"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/arrows"
            android:layout_marginBottom="@dimen/defaultMargin"
            android:layout_marginStart="@dimen/defaultMargin"
            tools:layout_editor_absoluteY="144dp">
        </TableLayout>

        <!-- Flèches de déplacement -->
        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/arrows"
            app:layout_constraintLeft_toRightOf="@+id/features"
            android:layout_marginLeft="@dimen/defaultMargin"
            android:layout_marginRight="@dimen/defaultMargin"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="@dimen/zero"
            app:layout_constraintTop_toBottomOf="@+id/maze"
            android:layout_marginStart="@dimen/defaultMargin"
            android:layout_marginEnd="@dimen/defaultMargin">
            <TableRow>
                <TextView
                    android:id="@+id/blank1"
                    android:layout_column="0"
                    android:layout_height="match_parent"/>
                <ImageView
                    android:src="@drawable/haut"
                    android:id="@+id/up"
                    android:layout_column="1"/>
                <TextView
                    android:id="@+id/blank2"
                    android:layout_column="2"
                    android:layout_height="match_parent"/>
            </TableRow>
            <TableRow>
                <ImageView
                    android:src="@drawable/gauche"
                    android:id="@+id/left"
                    android:layout_column="0"/>
                <TextView
                    android:id="@+id/blank3"
                    android:layout_column="1"
                    android:layout_height="match_parent"/>
                <ImageView
                    android:src="@drawable/droite"
                    android:id="@+id/right"
                    android:layout_column="2"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:id="@+id/blank4"
                    android:layout_column="0"
                    android:layout_height="match_parent"/>
                <ImageView
                    android:src="@drawable/bas"
                    android:id="@+id/down"
                    android:layout_column="1"/>
                <TextView
                    android:id="@+id/blank5"
                    android:layout_column="2"
                    android:layout_height="match_parent"/>
            </TableRow>
        </TableLayout>

        <!-- Points de compétences -->
        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/defaultMargin"
            app:layout_constraintTop_toBottomOf="@+id/arrows"
            android:id="@+id/tableLayout"
            android:layout_marginLeft="@dimen/defaultMargin"
            app:layout_constraintLeft_toLeftOf="parent">
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/points"
                    style="@style/basicText2"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zero"
                    style="@style/basicText3"
                    android:paddingLeft="@dimen/defaultMargin"
                    android:paddingRight="@dimen/defaultMargin"
                    android:id="@+id/skillPoints"/>
            </TableRow>
        </TableLayout>

        <!-- Bouton des potions (showing up) -->
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/potions"
            android:layout_marginRight="@dimen/defaultMargin"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="@dimen/defaultMargin"
            app:layout_constraintLeft_toLeftOf="parent"
            android:id="@+id/potions"
            android:layout_marginStart="@dimen/defaultMargin"
            android:layout_marginEnd="@dimen/defaultMargin"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

        <!-- Bouton des potions (Force) -->
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/defaultMargin"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="@dimen/defaultMargin"
            app:layout_constraintLeft_toLeftOf="parent"
            android:id="@+id/strengthPotion"
            android:layout_marginStart="@dimen/defaultMargin"
            android:layout_marginEnd="@dimen/defaultMargin"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

        <!-- Bouton des potions (Rouge) -->
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/defaultMargin"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="@dimen/defaultMargin"
            app:layout_constraintLeft_toLeftOf="parent"
            android:id="@+id/redPotion"
            android:layout_marginStart="@dimen/defaultMargin"
            android:layout_marginEnd="@dimen/defaultMargin"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/strengthPotion" />

        <!-- Bouton des potions (Bleue) -->
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/defaultMargin"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="@dimen/defaultMargin"
            app:layout_constraintLeft_toLeftOf="parent"
            android:id="@+id/bluePotion"
            android:layout_marginStart="@dimen/defaultMargin"
            android:layout_marginEnd="@dimen/defaultMargin"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/redPotion" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>